// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cities should create Cities with city items array  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="cities"
      >
        <h3
          class="title-30 cities__title"
        >
          Популярные города
        </h3>
        <ul
          class="list cities__list"
          data-testid="list"
        />
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="cities"
    >
      <h3
        class="title-30 cities__title"
      >
        Популярные города
      </h3>
      <ul
        class="list cities__list"
        data-testid="list"
      />
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Cities should create Cities with empty city items array  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="cities"
      >
        <h3
          class="title-30 cities__title"
        >
          Популярные города
        </h3>
        <ul
          class="list cities__list"
          data-testid="list"
        >
          <li
            class="cities__item"
          >
            <a
              class="link cities__link"
              href="/id/places"
              tabindex="0"
            >
              <div
                class="cities__text"
              >
                <span
                  class="cities__name"
                >
                  Краснодар
                </span>
                <span
                  class="cities__count"
                >
                  0
                   
                  интересных мест
                </span>
              </div>
              <img
                alt="Moscow"
                class="image dark-bg"
                src=""
              />
            </a>
          </li>
        </ul>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="cities"
    >
      <h3
        class="title-30 cities__title"
      >
        Популярные города
      </h3>
      <ul
        class="list cities__list"
        data-testid="list"
      >
        <li
          class="cities__item"
        >
          <a
            class="link cities__link"
            href="/id/places"
            tabindex="0"
          >
            <div
              class="cities__text"
            >
              <span
                class="cities__name"
              >
                Краснодар
              </span>
              <span
                class="cities__count"
              >
                0
                 
                интересных мест
              </span>
            </div>
            <img
              alt="Moscow"
              class="image dark-bg"
              src=""
            />
          </a>
        </li>
      </ul>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
